<resources>
    <string name="app_name">&appname;</string>
    <string name="low_memory_state">Low Cache</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="Logging">Logging In</string>
    <string name="login_failure">Login Failed</string>
    <string name="login_user_or_passwd_error">Incorrect Username or Password</string>
    <string name="account_already_exists">Account Registered</string>
    <string name="login_timeout">Login Timeout</string>
    <string name="login_network_fault">Please check the network</string>
    <string name="network_prompt">Network Information</string>
    <string name="cancel">Cancel</string>
    <string name="ask_really_cancel">Sure to cancel?</string>
    <string name="ok">OK</string>
    <string name="net_error">Network Error</string>
    <string name="network_quality_poor">Poor Network</string>
    <string name="next_step">Next Step</string>
    <string name="please_input_your_number">Please enter the number of the watch callback</string>
    <string name="number_not_effective">please enter valid phone number</string>
    <string name="dialog_loading_text">Loading...</string>
    <string name="net_error_tip">The network is not available, please check network settings</string>
    <string name="net_timeout">Connection timed out, Please check your network status and try again!</string>
    <string name="please_enter_verify_code">Enter Verification Code</string>
    <string name="please_enter_verify_code_you_received">Enter the verification code you received</string>
    <string name="next_to_indicate_your_consent">Clicking "Next" means you agree</string>
    <string name="get_sms_code_failure">Failed to get verification code</string>
    <string name="menu_tips">This is from Kevin</string>
    <string name="drawer_layout_open">Open</string>
    <string name="drawer_layout_close">Close</string>
    <string name="baby_card">All Kids</string>
    <string name="watch_the_information">Watch Infos</string>
    <string name="bind_and_unbind">Bind And Unbind</string>
    <string name="device_unbind">Bind And Unbind</string>
    <string name="app_setting">APP Settings</string>
    <string name="problems_and_feedback">Questions And Feedback</string>
    <string name="before_dawn">Dawn</string>
    <string name="morning">Morning</string>
    <string name="noon">Noon</string>
    <string name="afternoon">Afternoon</string>
    <string name="night">Evening</string>
    <string name="your_phone_number">Please enter your phone number</string>
    <string name="please_input_your_phone_number">Please enter your registered phone number</string>
    <string name="week_text_monday">Monday</string>
    <string name="week_text_tuesday">Tuesday</string>
    <string name="week_text_wednesday">Wednesday</string>
    <string name="week_text_thursday">Thursday</string>
    <string name="week_text_friday">Friday</string>
    <string name="week_text_saturday">Saturday</string>
    <string name="week_text_sunday">Sunday</string>
    <string name="week_short_text_monday">Mon</string>
    <string name="week_short_text_tuesday">Tue</string>
    <string name="week_short_text_wednesday">Wed</string>
    <string name="week_short_text_thursday">Thu</string>
    <string name="week_short_text_friday">Fri</string>
    <string name="week_short_text_saturday">Sat</string>
    <string name="week_short_text_sunday">Sun</string>
    <string name="about_us">About Us</string>
    <string name="current_version">Current Version: v%s</string>
    <string name="official_website">Official Website</string>
    <string name="user_agreement">User Agreement</string>
    <string name="notification">Notification</string>
    <string name="change_the_password">Change Password</string>
    <string name="clear_the_cache">Clear Cache</string>
    <string name="check_the_update">Check for updates</string>
    <string name="cache_unit">0.0 M</string>
    <string name="version">V 1.0.0</string>
    <string name="select_baby">Kids List</string>
    <string name="please_select_grade">Select Grade</string>
    <string name="one_grade">Grade One</string>
    <string name="two_grade">Grade Two</string>
    <string name="three_grade">Grade Three</string>
    <string name="four_grade">Grade Four</string>
    <string name="five_grade">Grade Five</string>
    <string name="six_grade">Grade Six</string>
    <string name="name">Nickname</string>
    <string name="me_and_baby">I am kid\'s %1$s</string>
    <string name="baby_information">Kid Information</string>
    <string name="phone_number">Phone Number</string>
    <string name="baby_sex">Sex</string>
    <string name="birthday">Birthday</string>
    <string name="grade">Grade</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="current_baby">Selected Kid</string>
    <string name="baby_information_saving">saving...</string>
    <string name="setting_alarm_clock_maximum_of_five">At Most Five</string>
    <string name="setting_alarm_clock_model_all">Daily</string>
    <string name="setting_alarm_clock_model_once">Once</string>
    <string name="setting_alarm_clock_model_workday">Workday</string>
    <string name="setting_alarm_clock_model_weekend">Weekend</string>
    <string name="setting_alarm_clock_model_repeat_custom">Custom</string>
    <string name="location_record_calendar_week_monday">Mon</string>
    <string name="location_record_calendar_week_tuesday">Tue</string>
    <string name="location_record_calendar_week_wednesday">Wed</string>
    <string name="location_record_calendar_week_thursday">Thu</string>
    <string name="location_record_calendar_week_friday">Fri</string>
    <string name="location_record_calendar_week_saturday">Sat</string>
    <string name="location_record_calendar_week_sunday">Sun</string>
    <string name="text_ack_msg">Has Read</string>
    <string name="text_delivered_msg">Has Reached</string>
    <string name="speaking_message_title">Voice Chat</string>
    <string name="speaking_message_state_send_fail_message_resend">Resend this voice message?</string>
    <string name="no_permission_audiorecord">Missing Recording Authority</string>
    <string name="no_current_device_information">Missing Current Device Information</string>
    <string name="canceled">Cancelled</string>
    <string name="datetime_year">Year</string>
    <string name="datetime_month">Month</string>
    <string name="datetime_day">Day</string>
    <string name="datetime_hour">Hour</string>
    <string name="datetime_minute">Minute</string>
    <string name="datetime_second">Second</string>
    <string name="am">Morning</string>
    <string name="pm">Afternoon</string>
    <string name="kid_position_time_MMddHHmm">%02d-%02d %02d:%02d</string>
    <string name="kid_position_time_yyyyMMddHHmm">%d-%02d-%02d %02d:%02d</string>
    <string name="message_time_yesterday">Yesterday</string>
    <string name="date_picker_unit_year">-</string>
    <string name="date_picker_unit_month">-</string>
    <string name="date_picker_unit_day">""</string>
    <string name="fence_title">Guard Fence</string>
    <string name="fence_add_success">Added E-fence Successfully!</string>
    <string name="fence_add_failth">Failed To Add E-fence!</string>
    <string name="fence_delete_confirm">Are you sure to delete this e-fence?</string>
    <string name="fence_delete_success">Deleted the e-fence successfully!</string>
    <string name="fence_delete_failth">Failed to delete the e-fence! Please retry!</string>
    <string name="fence_alert_content">Your kid[%1$s]is at%2$s%2$s[%3$s]</string>
    <string name="fence_name">Please enter the fence name</string>
    <string name="fence_in_alarm">Alert Of Entering</string>
    <string name="fence_out_alarm">Alert Of Leaving</string>
    <string name="fence_adding_fence">Add fence</string>
    <string name="fence_arrive">Reached The Fence</string>
    <string name="fence_leave">Leaved The Fence</string>
    <string name="fence_arrive_leave">Reached/Leaved The Fence</string>
    <string name="fence_add_area">Fence Scope</string>
    <string name="fence_enter_fence_name">Please enter the fence name</string>
    <string name="fence_name_conflict">Fence name conflicts! The name already exists!</string>
    <string name="fence_select_fence_type">You should choose alarm mode</string>
    <string name="device_state_low_power">Alarm Of Low Battery</string>
    <string name="device_state_sos">Emergency Alerm</string>
    <string name="device_alert">Sended</string>
    <string name="toast_title">Prompt</string>
    <string name="check_empty_error">%1$s cannot be empty, please re-enter!</string>
    <string name="check_match_error">%1$s is not valid, Please re-enter!</string>
    <string name="check_same_name_error">%1$s already exists, Please re-enter!</string>
    <string name="check_nickname_error">The nickname is a combination of 2~10 digits and letters, please re-enter!</string>
    <string name="check_password_error">The password is a combination of 6~16 digits or letters. Please enter it again!</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="different_password">The two passwords you entered mismatch</string>
    <string name="permission_to_apply">Apply for Permission</string>
    <string name="permission_dialog_message_head">Turn on in Settings-App-&appname;-Permission</string>
    <string name="permission_dialog_message_end">permissions, to use functions of &appname;
        normally</string>
    <string name="permission_camera">Camera</string>
    <string name="permission_location">Location</string>
    <string name="permission_storage">Storage</string>
    <string name="permission_phone">Tel</string>
    <string name="permission_sms">SMS</string>
    <string name="permission_contacts">Contacts</string>
    <string name="bind_device_scan_qr_code">Scan QR Code</string>
    <string name="login_out_title">Quit Current Account</string>
    <string name="login_out_message">Whether or not sign out the current &appname; account</string>
    <string name="title_1">Cool card</string>
    <string name="title_2">Ok card</string>
    <string name="title_3">Bad card</string>
    <string name="title_4">Ugly card</string>
    <string name="text_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Etiam eget ligula eu lectus lobortis condimentum.</string>
    <string name="bright_screen_time">Duration of screen bright</string>
    <string name="choose_date">Select Date</string>
    <string name="take_photo">Camera</string>
    <string name="album">Album</string>
    <string name="baby">Kid</string>
    <string name="register_login_type1">&#160;The love&#160;</string>
    <string name="register_login_type2">&#160;Never leave&#160;</string>
    <string name="register_login_type3">KCT Inc. All Rights Reserved</string>
    <string name="register_login_type4">© 2018 KCT Inc. All Rights Reserved</string>
    <string name="passive_mode_detailed">The watch will not report the location voluntarily, only when APP is opened, there will be no school guard and electronic fence notice. The most power saving is the longest waiting time for the watch.</string>
    <string name="passive_mode">Passive mode</string>
    <string name="save_power_mode">Save Mode</string>
    <string name="normal_mode">Normal mode</string>
    <string name="save_power_detailed">Reporting frequency is lower, electricity saving, school guarding and electronic fence function can not be promptly notified.</string>
    <string name="normal_mode_detailed">The best mode to enable all positioning functions of the watch.</string>
    <string name="private_place">private</string>
    <string name="public_place">public</string>
    <string name="bind_default">default</string>
    <string name="of_unbind"> \'s Bind?</string>
    <string name="sure_unbind">You are sure to lift </string>
</resources>