<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="true"
    android:background="@android:color/transparent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:ignore="RtlHardcoded,HardcodedText">



    <LinearLayout
        android:id="@+id/calen_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparentgray"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50"
            android:background="@drawable/tool_bar_background"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btnPreMonth"
                android:layout_width="@dimen/dimen_50"
                android:layout_height="@dimen/dimen_50"
                android:contentDescription="@string/choose_date"
                android:scaleType="centerInside"
                android:src="@drawable/calendar_date_left_selector" />

            <TextView
                android:id="@+id/tvCurrentMonth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/btnNextMonth"
                android:layout_width="@dimen/dimen_50"
                android:layout_height="@dimen/dimen_50"
                android:contentDescription="@string/choose_date"
                android:scaleType="centerInside"
                android:src="@drawable/calendar_date_right_selector" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f5f5f5"
            android:orientation="horizontal"
            android:paddingTop="8dp">

            <TextView
                style="@style/dateStyle"
                android:text="@string/location_record_calendar_week_sunday"
                android:textColor="@color/calendar_text_color" />

            <TextView
                style="@style/dateStyle"
                android:text="@string/location_record_calendar_week_monday"
                android:textColor="@color/calendar_text_color" />

            <TextView
                style="@style/dateStyle"
                android:text="@string/location_record_calendar_week_tuesday"
                android:textColor="@color/calendar_text_color" />

            <TextView
                style="@style/dateStyle"
                android:text="@string/location_record_calendar_week_wednesday"
                android:textColor="@color/calendar_text_color" />

            <TextView
                style="@style/dateStyle"
                android:text="@string/location_record_calendar_week_thursday"
                android:textColor="@color/calendar_text_color" />

            <TextView
                style="@style/dateStyle"
                android:text="@string/location_record_calendar_week_friday"
                android:textColor="@color/calendar_text_color" />

            <TextView
                style="@style/dateStyle"
                android:text="@string/location_record_calendar_week_saturday"
                android:textColor="@color/calendar_text_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/textl"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:background="#f5f5f5"
            android:orientation="vertical">

            <android.support.v4.view.ViewPager
                android:id="@+id/vp_calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>