<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_Background"
    android:orientation="vertical">

    <include
        android:id="@+id/title_bar"
        layout="@layout/title_bar" />


    <Button
        android:id="@+id/passive_mode_bt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40"
        android:layout_marginStart="@dimen/dimen_20"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/dimen_20"
        android:background="@drawable/text_blue_background_there"
        android:foreground="@drawable/foreground_shadow"
        android:onClick="onDebouncedClick"
        android:text="@string/passive_mode"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:padding="@dimen/dimen_5"
        android:text="@string/passive_mode_detailed"
        android:textColor="@color/text_color_four"
        android:textSize="12sp" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:background="@color/line_color" />


    <Button
        android:id="@+id/save_power_mode_bt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40"
        android:layout_marginStart="@dimen/dimen_20"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/dimen_20"
        android:background="@drawable/text_blue_background_there"
        android:foreground="@drawable/foreground_shadow"
        android:onClick="onDebouncedClick"
        android:text="@string/save_power_mode"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_15sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:padding="@dimen/dimen_5"
        android:text="@string/save_power_detailed"
        android:textColor="@color/text_color_four"
        android:textSize="12sp" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:background="@color/line_color" />


    <Button
        android:id="@+id/normal_mode_bt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40"
        android:layout_marginStart="@dimen/dimen_20"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/dimen_20"
        android:background="@drawable/text_blue_background_there"
        android:foreground="@drawable/foreground_shadow"
        android:onClick="onDebouncedClick"
        android:text="@string/normal_mode"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_15sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:gravity="center"
        android:padding="@dimen/dimen_5"
        android:text="@string/normal_mode_detailed"
        android:textColor="@color/text_color_four"
        android:textSize="12sp" />


</LinearLayout>