<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingEnd="@dimen/dimen_40"
    android:paddingStart="@dimen/dimen_40">

    <TextView
        android:id="@+id/take_photo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40"
        android:background="@drawable/text_blue_background_two"
        android:gravity="center"
        android:text="@string/take_photo"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_20sp" />

    <TextView
        android:id="@+id/album"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40"
        android:layout_marginTop="20dp"
        android:background="@drawable/text_blue_background_two"
        android:gravity="center"
        android:text="@string/album"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_20sp" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40"
        android:layout_marginTop="20dp"
        android:background="@drawable/baby_card_current_text_bg"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_20sp" />

</LinearLayout>