<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/TimePickerDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="@dimen/dimen_20"
    android:paddingEnd="@dimen/dimen_20">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_top_bg"
        android:gravity="center">

        <TextView
            android:id="@+id/unbind_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:text="@string/sure_unbind"
            android:textColor="@color/text_color_two"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/baby_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:text="@string/baby"
            android:textColor="@color/main_color_tone"
            android:textSize="@dimen/dimen_15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:text="@string/of_unbind"
            android:textColor="@color/text_color_two"
            android:textSize="@dimen/dimen_15sp" />


    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/main_background_color" />


    <include layout="@layout/ok_and_cancel" />
</LinearLayout>