<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_boot"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/logo_boot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17000002" />

    <LinearLayout
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57">

        <TextView
            android:id="@+id/tv_type1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity=""
            android:text="@string/register_login_type1"
            android:textColor="@color/blue_tone"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/love_line_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register_login_type2"
            android:textColor="@color/text_color_six"
            android:textSize="@dimen/dimen_15sp"
            android:textStyle="normal" />


    </LinearLayout>

    <TextView
        android:id="@+id/company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/register_login_type3"
        android:textColor="@color/text_color_six"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/all_rights_reserved"
        app:layout_constraintEnd_toEndOf="@+id/all_rights_reserved"
        app:layout_constraintStart_toStartOf="@+id/all_rights_reserved" />

    <TextView
        android:id="@+id/all_rights_reserved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/register_login_type4"
        android:textColor="@color/text_color_six"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".978" />

</android.support.constraint.ConstraintLayout>